--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.17.9",
+    "@types/three": "^0.169.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.9.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "tailwind-merge": "^2.5.2",
+    "three": "^0.169.0"
   },
   "devDependencies": {
     "@types/node": "^20",
