--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-scroll": "^1.9.0",
     "tailwind-merge": "^2.5.2",
     "three": "^0.169.0"
